# tui-player

./: .gitignore  Cargo.toml  MEMORY.md  README.md  TODO.md
.claude/: settings.local.json
src/: controls.rs  eq.rs  file_browser.rs  gauge.rs  lyrics.rs  main.rs  now_playing.rs  progress.rs  theme.rs  visualizer.rs  volume.rs
