[package]
name = "tui-player"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
image = "0.25"
libc = "0.2.182"
ratatui = "0.30.0"
rodio = "0.21.1"
rustfft = "6.4.1"
serde_json = "1"
symphonia = { version = "0.5.5", features = ["mp3", "ogg", "flac", "isomp4", "wav", "aac", "pcm", "vorbis"] }
tui-tree-widget = "0.24"
ureq = "3"
